--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,5 @@
 <!-- CSS only -->
+<head>
 <link
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
   rel="stylesheet"
@@ -11,4 +12,4 @@
   integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
   crossorigin="anonymous"
 ></script>
-<app-flight>loading</app-flight>
+<app-login>loading<app-login>
